[package]
name = "view-function"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
server = ["dep:rocket", "dep:rocket_codegen"]

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
url = "2.3.1"
once_cell = "1.7.2"
anyhow = "1.0.52"
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753", features = ["lazy_natives"] }
move-stdlib = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-vm-test-utils = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753", features = ["table-extension"] }
move-core-types = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753", features = ["address32"] }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
hex = "0.4.3"
tokio = "1.21.2"
serde = "1.0.147"
clap = { version = "4.0.18", features = [ "derive", "cargo" ] }
simplelog = "^0.12.0"
log = "0.4.17"
path-clean = "0.1.0"
cacache = "10.0.1"
serde_json = "1.0"
home = "0.5.4"
toml = "0.5.9"
rocket = { version = "0.4.4", optional = true }
rocket_codegen = { version = "0.4.4", optional = true }

[dev-dependencies]
ctor = "0.1.26"
