[package]
name = "view-function"
license = "Apache-2.0"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
url = "2.3.1"
once_cell = "1.7.2"
anyhow = "1.0.62"
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01", features = ["lazy_natives"] }
move-stdlib = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
move-vm-test-utils = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01", features = ["table-extension"] }
move-core-types = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01", features = ["address32"] }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
move-table-extension = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core", rev = "16781dcd0e8683c7408aed5f8e5de3c896ec152b" }
aptos-gas = { git = "https://github.com/aptos-labs/aptos-core", rev = "16781dcd0e8683c7408aed5f8e5de3c896ec152b" }
hex = "0.4.3"
tokio = "1.21.2"
serde = "1.0.147"
clap = { version = "4.0.18", features = [ "derive", "cargo" ] }
simplelog = "^0.12.0"
log = "0.4.17"
path-clean = "0.1.0"
cacache = "10.0.1"
serde_json = "1.0"
home = "0.5.4"
toml = "0.5.9"
uuid = { version = "1.2.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
better_any = "0.1.1"
sha3 = "0.9.1"
smallvec = "1.7.0"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
parking_lot = "0.12"

[dev-dependencies]
ctor = "0.1.26"
